--- a/friends.html
+++ b/friends.html
@@ -61,8 +61,11 @@
                         </div>
                     </div>
                     <div class="user-component__column">
-                        <span>2</span>
-                        <i class="fas fa-chevron-right fa-xs"></i>
+                        <div>
+                            <span>2</span>
+                            <i class="fas fa-chevron-right fa-xs"></i>
+                        </div>
+
                     </div>
                     
                 </div>
@@ -75,9 +78,9 @@
         <nav class="nav">
             <ul class="nav__list">
                 <li class="nav__btn"><a class="nav__link" href="friends.html"><i class="fas fa-user fa-lg"></i></a></li>
-                <li class="nav__btn"><a class="nav__link" href="#"><span class="nav__notification">1</span><i class="far fa-comment fa-lg"></i></a></li>
-                <li class="nav__btn"><a class="nav__link" href="#"><i class="fas fa-search fa-lg"></i></a></li>
-                <li class="nav__btn"><a class="nav__link" href="#"><span class="nav__plusinfo"> </span><i class="fas fa-ellipsis-h fa-lg"></i></a></li>
+                <li class="nav__btn"><a class="nav__link" href="chats.html"><span class="nav__notification badge">1</span><i class="far fa-comment fa-lg"></i></a></li>
+                <li class="nav__btn"><a class="nav__link" href="find.html"><i class="fas fa-search fa-lg"></i></a></li>
+                <li class="nav__btn"><a class="nav__link" href="more.html"><span class="nav__plusinfo"> </span><i class="fas fa-ellipsis-h fa-lg"></i></a></li>
             </ul>
         </nav>
         
