--- a/find.html
+++ b/find.html
@@ -4,7 +4,7 @@
         <link rel="stylesheet" href="css/styles.css">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Friends - Kokoa Clone</title>
+        <title>Find - Kokoa Clone</title>
     </head>
     <body>
         <div class="status-bar">
@@ -60,16 +60,43 @@
                 </div>
                 <div class="open-post">
                     <div class="open-post__column">
-                        <h5 class="open-post__title">#BTS</h5>
-                        <h6 class="open-post__hashtags">#bts#army#friends</h6>
+                        <h5 class="open-post__title">#(G)I-DLE</h5>
+                        <h6 class="open-post__hashtags">#idle#neverland#friends</h6>
                         <div class="open-post__members">
-                            <img src="#" />
-                            <span class="open-post__member-count">802 members</span>
+                            <img src="https://ww.namu.la/s/b48ecd528a1ab3092bba4b42423a32b5827d397a04aef9b41e6493815d47bb71303ebc2babd0d99d1ed89fa9f21838cd55754638ea7ebdda1e65c169ae97f4e10402341e58f12f35c99f027f231225073318342460cc942cf36c2b56dd1312a8" />
+                            <span class="open-post__members-count">41802 members</span>
                             <div class="divider"></div>
-                            <span class="open-post__member-status">Active</span>
+                            <span class="open-post__members-status">Active</span>
                         </div>
                     </div>
-                    <div class="open-post__column"></div>
+                    <div class="open-post__column">
+                        <div class="open-post__photo">
+                            <img src="https://pbs.twimg.com/media/EsKP7UFUcAMyL6q?format=jpg&name=large" />
+                            <div class="open-post__heart-count">
+                                <i class="fas fa-heart fa-xs"></i><span>20492</span>
+                            </div>
+                        </div>                        
+                    </div>
+                </div>
+                <div class="open-post">
+                    <div class="open-post__column">
+                        <h5 class="open-post__title">I-DLE Hwa~~</h5>
+                        <h6 class="open-post__hashtags">#woogi#waiting room#idle</h6>
+                        <div class="open-post__members">
+                            <img src="https://ww.namu.la/s/b48ecd528a1ab3092bba4b42423a32b5827d397a04aef9b41e6493815d47bb71303ebc2babd0d99d1ed89fa9f21838cd55754638ea7ebdda1e65c169ae97f4e10402341e58f12f35c99f027f231225073318342460cc942cf36c2b56dd1312a8" />
+                            <span class="open-post__members-count">15927 members</span>
+                            <div class="divider"></div>
+                            <span class="open-post__members-status">Active</span>
+                        </div>
+                    </div>
+                    <div class="open-post__column">
+                        <div class="open-post__photo">
+                            <img src="https://pbs.twimg.com/media/Erw6Lw2U0AEkkIH?format=jpg&name=large" />
+                            <div class="open-post__heart-count">
+                                <i class="fas fa-heart fa-xs"></i><span>8953</span>
+                            </div>
+                        </div>                        
+                    </div>
                 </div>
             </div>
         </main>
