--- a/more.html
+++ b/more.html
@@ -4,7 +4,7 @@
         <link rel="stylesheet" href="css/styles.css">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Chat - Kokoa Clone</title>
+        <title>More - Kokoa Clone</title>
     </head>
     <body>
         <div class="status-bar">
@@ -23,31 +23,27 @@
         </div>
 
         <header class="screen-header">
-            <h1 class="screen-header__title">Chats</h1>
+            <h1 class="screen-header__title">More</h1>
             <div class="screen-header__icons">
                 <span><i class="fas fa-search fa-lg"></i></span>
-                <span><i class="far fa-comment-dots"></i></span>
                 <span><i class="fas fa-music"></i></span>
                 <span><i class="fas fa-cog"></i></span>
             </div>
         </header>
 
-        <main class="main-screen">
-            <div class="user-component">
-                <div class="user-component__column">
-                    <img src="https://pbs.twimg.com/profile_images/982475173315018752/ieEV98Wo_400x400.jpg" class="user-component__avatar user-component__avatar" />
-                    <div class="user-component__text">
-                        <h4 class="user-component__title">(G)I-DLE</h4>
-                        <h6 class="user-component__subtitle">Please check My Kokoa Account Info</h6><!--나중에 필요할때 사용-->
-                    </div>
+        <div class="user-component">
+            <div class="user-component__column">
+                <img src="https://pbs.twimg.com/profile_images/982475173315018752/ieEV98Wo_400x400.jpg" class="user-component__avatar user-component__avatar--xl" />
+                <div class="user-component__text">
+                    <h4 class="user-component__title">(G)I-DLE</h4>
+                    <h6 class="user-component__subtitle">+1 787-493-4219</h6><!--나중에 필요할때 사용-->
                 </div>
-                <div class="user-component__column">
-                    <span class="user-component__time">21:22</span>
-                    <div class="badge">1</div>
-                </div>
-                
             </div>
-        </main>
+            <div class="user-component__column">
+                <i class="far fa-comment-alt fa-2x"></i>
+            </div>
+            
+        </div>
 
 
 
@@ -55,7 +51,7 @@
         <nav class="nav">
             <ul class="nav__list">
                 <li class="nav__btn"><a class="nav__link" href="friends.html"><i class="far fa-user fa-lg"></i></a></li>
-                <li class="nav__btn"><a class="nav__link" href="chats.html"><span class="nav__notification badge">1</span><i class="fas fa-comment fa-lg"></i></i></a></li>
+                <li class="nav__btn"><a class="nav__link" href="chats.html"><i class="far fa-comment fa-lg"></i></i></a></li>
                 <li class="nav__btn"><a class="nav__link" href="find.html"><i class="fas fa-search fa-lg"></i></a></li>
                 <li class="nav__btn"><a class="nav__link" href="more.html"><span class="nav__plusinfo"> </span><i class="fas fa-ellipsis-h fa-lg"></i></a></li>
             </ul>
