--- a/more.html
+++ b/more.html
@@ -31,19 +31,55 @@
             </div>
         </header>
 
-        <div class="user-component">
-            <div class="user-component__column">
-                <img src="https://pbs.twimg.com/profile_images/982475173315018752/ieEV98Wo_400x400.jpg" class="user-component__avatar user-component__avatar--xl" />
-                <div class="user-component__text">
-                    <h4 class="user-component__title">(G)I-DLE</h4>
-                    <h6 class="user-component__subtitle">+1 787-493-4219</h6><!--나중에 필요할때 사용-->
+        <main class="main-screen more-screen">
+            <div class="user-component">
+                <div class="user-component__column">
+                    <img src="https://pbs.twimg.com/profile_images/982475173315018752/ieEV98Wo_400x400.jpg" class="user-component__avatar user-component__avatar--xl" />
+                    <div class="user-component__text">
+                        <h4 class="user-component__title">(G)I-DLE</h4>
+                        <h6 class="user-component__subtitle">+1 787-493-4219</h6><!--나중에 필요할때 사용-->
+                    </div>
+                </div>
+                <div class="user-component__column">
+                    <i class="far fa-comment-alt fa-2x"></i>
                 </div>
             </div>
-            <div class="user-component__column">
-                <i class="far fa-comment-alt fa-2x"></i>
+            <div class="icon-row">
+                <div class="icon-row__icon">
+                    <i class="far fa-calendar-check"></i>
+                    <span>Calender</span>
+                </div>
+                <div class="icon-row__icon">
+                    <i class="far fa-smile-wink"></i>
+                    <span>Emoticons</span>
+                </div>
+                <div class="icon-row__icon">
+                    <i class="fas fa-paint-roller"></i>
+                    <span>Themes</span>
+                </div>
+                <div class="icon-row__icon">
+                    <i class="fas fa-file-invoice-dollar"></i>
+                    <span>Account</span>
+                </div>
+                <div class="icon-row__icon">
+                    <i class="far fa-comments"></i>
+                    <span>Openchat</span>
+                </div>
             </div>
-            
-        </div>
+            <div class="more-suggestions">
+                <h4 class="more-suggestions__title">Suggestions</h4>
+                <div class="more-suggestions__icons">
+                    <div class="more-suggestions__icon">
+                        <div class="more-suggestions__icon-image">
+                            <i class="fas fa-quote-right"></i>
+                        </div>
+                        <span class="more-suggestions__icon-text">Kokoa Story</span>
+                    </div>
+                </div>
+            </div>            
+        </main>
+
+        
 
 
 
