--- a/more.html
+++ b/more.html
@@ -27,7 +27,7 @@
             <div class="screen-header__icons">
                 <span><i class="fas fa-search fa-lg"></i></span>
                 <span><i class="fas fa-music"></i></span>
-                <span><i class="fas fa-cog"></i></span>
+                <span><a href="settings.html"><i class="fas fa-cog"></i></a></span>
             </div>
         </header>
 
@@ -69,6 +69,18 @@
             <div class="more-suggestions">
                 <h4 class="more-suggestions__title">Suggestions</h4>
                 <div class="more-suggestions__icons">
+                    <div class="more-suggestions__icon">
+                        <div class="more-suggestions__icon-image">
+                            <i class="fas fa-quote-right"></i>
+                        </div>
+                        <span class="more-suggestions__icon-text">Kokoa Story</span>
+                    </div>
+                    <div class="more-suggestions__icon">
+                        <div class="more-suggestions__icon-image">
+                            <i class="fas fa-quote-right"></i>
+                        </div>
+                        <span class="more-suggestions__icon-text">Kokoa Story</span>
+                    </div>
                     <div class="more-suggestions__icon">
                         <div class="more-suggestions__icon-image">
                             <i class="fas fa-quote-right"></i>
