--- a/chats.html
+++ b/chats.html
@@ -28,7 +28,7 @@
                 <span><i class="fas fa-search fa-lg"></i></span>
                 <span><i class="far fa-comment-dots"></i></span>
                 <span><i class="fas fa-music"></i></span>
-                <span><i class="fas fa-cog"></i></span>
+                <span><a href="settings.html"><i class="fas fa-cog"></i></a></span>
             </div>
         </header>
 
