--- a/friends.html
+++ b/friends.html
@@ -27,7 +27,7 @@
             <div class="screen-header__icons">
                 <span><i class="fas fa-search fa-lg"></i></span>
                 <span><i class="fas fa-music"></i></span>
-                <span><i class="fas fa-cog"></i></span>
+                <span><a href="settings.html"><i class="fas fa-cog"></i></a></span>
             </div>
         </header>
 
