--- a/settings.html
+++ b/settings.html
@@ -22,7 +22,11 @@
             </div>
         </div>
 
-        
+        <hearder class="alt-header">
+            <div class="alt-header__column"><i class="fas fa-angle-left fa-3x"></i></div>
+            <div class="alt-header__column"><h1 class="alt-header__title">Setting</h1></div>
+            <div class="alt-header__column"><i class="fas fa-search fa-lg"></i></div>
+        </hearder>
 
       
 
