--- a/settings.html
+++ b/settings.html
@@ -28,6 +28,21 @@
             <div class="alt-header__column"><i class="fas fa-search fa-lg"></i></div>
         </hearder>
 
+        <main class="main-screen">
+            <ul class="settings-list">
+                <li class="settings-setting">
+                    <i class="fas fa-bullhorn"></i>
+                    <span>Notices</span>
+                </li>
+                <li class="settings-setting">
+                    <span>Kokoa Lab</span>
+                </li>
+                <li class="settings-setting">
+                    <span>Version</span>
+                </li>
+            </ul>
+        </main>
+
       
 
 
