--- a/chats.html
+++ b/chats.html
@@ -33,11 +33,12 @@
         </header>
 
         <main class="main-screen">
-            <div class="user-component">
+            <a href="chat.html">
+                <div class="user-component">
                 <div class="user-component__column">
-                    <img src="https://pbs.twimg.com/profile_images/982475173315018752/ieEV98Wo_400x400.jpg" class="user-component__avatar user-component__avatar" />
+                    <img src="screenshots/소연3.jpg" class="user-component__avatar user-component__avatar" />
                     <div class="user-component__text">
-                        <h4 class="user-component__title">(G)I-DLE</h4>
+                        <h4 class="user-component__title">Lovely Soyeon</h4>
                         <h6 class="user-component__subtitle">Please check My Kokoa Account Info</h6><!--나중에 필요할때 사용-->
                     </div>
                 </div>
@@ -46,7 +47,8 @@
                     <div class="badge">1</div>
                 </div>
                 
-            </div>
+                </div>
+            </a>
         </main>
 
 
