--- a/settings.html
+++ b/settings.html
@@ -23,22 +23,33 @@
         </div>
 
         <hearder class="alt-header">
-            <div class="alt-header__column"><i class="fas fa-angle-left fa-3x"></i></div>
+            <div class="alt-header__column"><a href="more.html"><i class="fas fa-angle-left fa-3x"></i></a></div>
             <div class="alt-header__column"><h1 class="alt-header__title">Setting</h1></div>
             <div class="alt-header__column"><i class="fas fa-search fa-lg"></i></div>
         </hearder>
 
         <main class="main-screen">
             <ul class="settings-list">
-                <li class="settings-setting">
-                    <i class="fas fa-bullhorn"></i>
-                    <span>Notices</span>
+                <li class="settings__setting">
+                    <div class="settings__setting-column">
+                        <i class="fas fa-bullhorn"></i>
+                        <span>Notices</span>
+                    </div>
+                    <div class="settings__setting-column"> </div>
                 </li>
-                <li class="settings-setting">
-                    <span>Kokoa Lab</span>
+                <li class="settings__setting">
+                    <div class="settings__setting-column">
+                        <i class="fas fa-flask"></i>
+                        <span>Kokoa Lab</span>
+                    </div>
+                    <div class="settings__setting-column"> </div>
                 </li>
-                <li class="settings-setting">
-                    <span>Version</span>
+                <li class="settings__setting">
+                    <div class="settings__setting-column">
+                        <i class="fas fa-info-circle"></i>
+                        <span>Version</span>
+                    </div>
+                    <div class="settings__setting-column">Latest Version</div>
                 </li>
             </ul>
         </main>
