--- a/chat.html
+++ b/chat.html
@@ -25,7 +25,7 @@
         <hearder class="alt-header">
             <div class="alt-header__column"><a href="more.html"><i class="fas fa-angle-left fa-3x"></i></a></div>
             <div class="alt-header__column"><h1 class="alt-header__title">Lovely Soyeon</h1></div>
-            <div class="alt-header__column"><i class="fas fa-search fa-lg"></i><i class="fas fa-bars fa-lg"></i></div>
+            <div class="alt-header__column"><i class="fas fa-search fa-lg"></i><span><i class="fas fa-bars fa-lg"></i></span></div>
         </hearder>
 
         <main class="main-screen">
