--- a/chat.html
+++ b/chat.html
@@ -23,13 +23,15 @@
         </div>
 
         <hearder class="alt-header">
-            <div class="alt-header__column"><a href="more.html"><i class="fas fa-angle-left fa-3x"></i></a></div>
+            <div class="alt-header__column"><a href="chats.html"><i class="fas fa-angle-left fa-3x"></i></a></div>
             <div class="alt-header__column"><h1 class="alt-header__title">Lovely Soyeon</h1></div>
             <div class="alt-header__column"><i class="fas fa-search fa-lg"></i><span><i class="fas fa-bars fa-lg"></i></span></div>
         </hearder>
 
-        <main class="main-screen">
-          
+        <main class="main-screen main-chat">
+          <div class="chat__timestamp">
+              Tuesday, June 30, 2020
+          </div>
         </main>
 
       
