--- a/chat.html
+++ b/chat.html
@@ -32,6 +32,17 @@
           <div class="chat__timestamp">
               Tuesday, June 30, 2020
           </div>
+
+          <div class="message-row">
+              <img src="screenshots/소연3.jpg"/>
+              <div class="message-row__content">
+                  <span class="message__author">Lovely Soyeon</span>
+                  <div class="message__info">
+                      <span class="message__bubble">Hi!</span>
+                      <span class="message__time">21:27</span>
+                  </div>
+              </div>
+          </div>
         </main>
 
       
