--- a/chat.html
+++ b/chat.html
@@ -43,6 +43,17 @@
                   </div>
               </div>
           </div>
+
+          <div class="message-row">
+            <img src="screenshots/소연3.jpg"/>
+            <div class="message-row__content">
+                <span class="message__author">Lovely Soyeon</span>
+                <div class="message__info">
+                    <span class="message__bubble">Hi!</span>
+                    <span class="message__time">21:27</span>
+                </div>
+            </div>
+          </div>
         </main>
 
       
