--- a/chat.html
+++ b/chat.html
@@ -44,12 +44,10 @@
               </div>
           </div>
 
-          <div class="message-row">
-            <img src="screenshots/소연3.jpg"/>
+          <div class="message-row message-row--own">
             <div class="message-row__content">
-                <span class="message__author">Lovely Soyeon</span>
                 <div class="message__info">
-                    <span class="message__bubble">Hi!</span>
+                    <span class="message__bubble">What's up?</span>
                     <span class="message__time">21:27</span>
                 </div>
             </div>
