--- a/chat.html
+++ b/chat.html
@@ -69,7 +69,7 @@
         </form>
 
         <div id="no-mobile">
-            <span>Your screen is too big ㅠㅠ</span>
+            <span>Your screen is too big. Please use your phone.</span>
         </div>
         <script src="https://kit.fontawesome.com/889a115943.js" crossorigin="anonymous"></script>
     </body>
